@@ -1,3 +1,7 @@
+2013-12-28  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oraconf.rb: fix for Windows x64. OCI.lib for MSVC doesn't
+	    work with mingw64 compilers. fix URL in the error message.
+
 2013-12-14  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8/metadata.rb, test/test_metadata.rb: fix
 	    OCI8::Metadata::Synonym#schema_name and #translated_name
